--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/ui": "^4.2"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
@@ -24,6 +25,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Mass\\User\\": "modules/Mass/User/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
